<resources>
    <!-- Screen titles -->
    <string name="app_name">Sunscreen</string>
    <string name="location_title">Select Location</string>
    <string name="skin_type_title">Select Skin Type</string>
    <string name="clothing_screen_title">Select Clothing</string>

    <!-- General -->
    <string name="loading">Loading</string>

    <!-- Skin type selection -->
    <string name="skin_type_instructions">Select the skin type that most closely resembles your own.</string>
    <!-- Skin types -->
    <string name="type_1_title">Type I</string>
    <string name="type_1_description">Extremely sensitive skin. Always burns. Never tans.</string>
    <string name="type_1_example">Ivory skin.\nLight blue, green, or gray eyes.\nRed or light blond hair.\n</string>
    <string name="type_2_title">Type II</string>
    <string name="type_2_description">Very sensitive skin. Burns easily. Tans minimally.</string>
    <string name="type_2_example">Fair or pale skin.\nBlue, gray, or green eyes.\nBlond hair.</string>
    <string name="type_3_title">Type III</string>
    <string name="type_3_description">Sensitive skin. Sometimes burns. Slowly tans to light brown</string>
    <string name="type_3_example">Fair to beige skin, with golden undertones.\nHazel or light brown eyes.\nDark blond or light brown hair.</string>
    <string name="type_4_title">Type IV</string>
    <string name="type_4_description">Mildly sensitive skin. Burns minimally. Always tans to moderate brown.</string>
    <string name="type_4_example">Olive or light brown skin.\nDark brown eyes.\nDark brown hair.</string>
    <string name="type_5_title">Type V</string>
    <string name="type_5_description">Resistant skin. Rarely burns. Tans well.</string>
    <string name="type_5_example">Dark brown skin.\nDark brown eyes.\nDark brown to black hair.</string>
    <string name="type_6_title">Type VI</string>
    <string name="type_6_description">Very resistant skin. Never burns. Deeply pigmented.</string>
    <string name="type_6_example">Darkest brown skin.\nDark brown eyes.\nBlack hair.</string>

    <!-- Clothing selection -->
    <string name="clothing_screen_instructions">The amount of skin exposed to the sun affects Vitamin D absorption.\nIf you are only tracking sunburn, you may skip this step, or use the default option.</string>
    <string name="clothing_screen_done">Continue</string>
    <!-- Tops -->
    <string name="clothing_top_nothing">Bare chest or bikini</string>
    <string name="clothing_top_some">T-shirt or tank top</string>
    <string name="clothing_top_covered">Long sleeve shirt</string>
    <!-- Bottoms -->
    <string name="clothing_bottom_nothing">Bikini bottom</string>
    <string name="clothing_bottom_some">Shorts</string>
    <string name="clothing_bottom_covered">Pants</string>

    <!-- Location screen -->
    <string name="current_location">Enter the ZIP code of your current location</string>
    <string name="skip">Skip</string>
    <string name="search">Search</string>
    <string name="location_background_content_description">Woman wearing a hat walking on the beach on a sunny day</string>

    <!-- Burn Time section -->
    <string name="could_burn">You could burn in</string>
    <string name="minutes_to_burn">%d minutes</string>
    <string name="unknown">Unknown</string>
    <string name="unlikely">No burn expected</string>

    <!-- UV Tracking section -->
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="spf">SPF</string>
    <string name="spf_hint">1</string>
    <string name="on_snow_or_water">On snow or water</string>

    <!-- Main tracking screen -->
    <string name="sunburn">Sunburn</string>
    <string name="sunburn_progress">%d %%</string>
    <string name="vitamin_d">Vitamin D</string>
    <string name="vitamin_d_progress">%d IU</string>
    <string name="location">ZIP Code</string>

    <!-- Notification for sun tracking service -->
    <string name="notification_title">@string/app_name</string>
    <string name="notification_text">Tracking sun exposure</string>

</resources>