...
    uiState: UvChartState,
    onEvent: (UvChartEvent) -> Unit,
    modifier: Modifier = Modifier
) {
    when (uiState) {
        is UvChartState.NoData -> {
            UvChart(
                modifier = modifier,
                onValueSelected = { onEvent(UvChartEvent.Touch(it.first.toInt(), it.second.toInt())) }
            )
        }
        is UvChartState.HasData -> {
            UvChart(
...
